# popgen-npe

./: .gitignore  CLAUDE.md  README.md  environment.yaml  pyproject.toml
docs/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  processors.rst  simulators.rst  tutorial.rst  usage.rst
example_data/MutRecRate/: popmap.yaml  test.vcf.gz.tbi  true_rates.tsv  windows.bed
experiments/aratha-2epoch/: experiment.sh  experiment.smk
experiments/aratha-2epoch-extra/: .gitignore  compare-posteriors.py  experiment-config.yaml  experiment.sh  experiment.smk  plot-posterior-surfaces.py
experiments/aratha-2epoch-extra/npe-config/: AraTha_2epoch_cnn.yaml  AraTha_2epoch_rnn.yaml  AraTha_2epoch_summ_stats.yaml
experiments/aratha-2epoch/npe-config/: AraTha_2epoch_cnn.yaml  AraTha_2epoch_rnn.yaml
experiments/dependent-variable-popn-size/: compare-analysis.py  compare-posteriors.py  create-6-panel-with-baselines.py  simulate-for-posterior.py
experiments/dependent-variable-popn-size/baselines/: msmc2_utils.py  run_baselines.py
experiments/relernn-prior/: experiment.sh  plot_coverage_comparison.py  predict_on_true.py
experiments/variable-popn-size/: compare-analysis.py  compare-posteriors.py  create-3x3-panel-with-baselines.py  simulate-for-posterior.py
resources/util/: simulate-vcf.py
workflow/config/: MutRecRate_cnn.yaml
workflow/scripts/: infer_batch.py  plot_diagnostics.py  plot_simulation_stats.py  train_embedding_network.py  train_npe_on_embeddings.py  train_npe_on_features.py  ts_simulators.py  utils.py
(+21 files in other folders)
